--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 
     </div>
     <div class="w3-button w3-right w3-padding-16">Contact Us</div>
-    <div class="w3-button w3-right w3-padding-16" style="margin-right: 20px">our  Menu</div>
+    <a style="color: black;" href="Menu.html"><div class="w3-button w3-right w3-padding-16" style="margin-right: 20px">our  Menu</div></a>
     <div class="w3-center w3-padding-16" style="margin-left: 14%">Cinnamon's Restaurant</div>
   </div>
 </div>
