--- a/employeedatabase.html
+++ b/employeedatabase.html
@@ -14,7 +14,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 th,td {padding:10px}
 
 tr:nth-child(odd) {
-    background-color: #f2f2f2  
+    background-color: #f1f3f8; 
     color:#000;    
 }
 </style>
