--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <img src="meat.png" width="40px" height="35px" alt="LOGO" onclick="w3_open()">
 
     </div>
-    <div class="w3-button w3-right w3-padding-16">Contact Us</div>
+    <a style="color: black;" href="contactus.html"><div class="w3-button w3-right w3-padding-16">Contact Us</div></a>
     <a style="color: black;" href="Menu.html"><div class="w3-button w3-right w3-padding-16" style="margin-right: 20px">our  Menu</div></a>
     <div class="w3-center w3-padding-16" style="margin-left: 18%; font-size: 30px;">Cinnamon's Restaurant</div>
   </div>
