--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@ body,h1,h2,h3,h4,h5,h6
     <!--Card 1-->
     <div class="w3-third w3-container w3-margin-bottom" id="grid">
        <div class="card" >
-    <div class="card-body" >
+    <div class="card-body animated slideInLeft" >
 
   <img src="blog_images/bowls-with-meat-stew-salads-and-spices-4194625.jpg" alt="Steak" style="width:100%">
   <div class="content2" style="padding: 0px 10px 10px 10px;" >
@@ -72,9 +72,9 @@ body,h1,h2,h3,h4,h5,h6
     <!--Card 2-->
     <div class="w3-third w3-container w3-margin-bottom" id="grid">
        <div class="card" >
-    <div class="card-body" >
+    <div class="card-body animated bounceInDown" >
 
-  <img src="blog_images/chef-holding-white-tea-cup-887827.jpg" alt="Steak" style="width:100%">
+  <img  src="blog_images/chef-holding-white-tea-cup-887827.jpg" alt="Steak" style="width:100%">
   <div class="content2" style="padding: 0px 10px 10px 10px;" >
   <h4 class="card-title"><a>Advice from John Taffer</a></h4>
       <p class="card-text" style="color:#07031a;">Some quick example text to build on the card title and make up the bulk of the card's
@@ -91,7 +91,7 @@ body,h1,h2,h3,h4,h5,h6
     <!--Card 3-->
     <div class="w3-third w3-container" id="grid">
       <div class="card" >
-    <div class="card-body" >
+    <div class="card-body animated bounceInDown" >
 
 <video controls width="100%" height="182px" loop="True" poster="new.jpg">
 <source src="promo.mp4" type="video/mp4">
@@ -113,7 +113,7 @@ Sorry, your browser doesn't support embedded videos.
     <!--card 4-->
         <div class="w3-third w3-container" id="grid">
       <div class="card" >
-    <div class="card-body" >
+    <div class="card-body animated slideInRight" >
 
   <img src="blog_images/bowls-with-meat-stew-salads-and-spices-4194625.jpg" alt="Steak" style="width:100%">
   <div class="content2" style="padding: 0px 10px 10px 10px;" >
@@ -137,7 +137,7 @@ Sorry, your browser doesn't support embedded videos.
   <div class="w3-row-padding" style="margin-top: 50px; margin-bottom: 40px; margin-left: 190px;">
     <div class="w3-third w3-container w3-margin-bottom" id="grid">
       <div class="card" >
-    <div class="card-body" >
+    <div class="card-body animated slideInLeft" >
 
   <img src="blog_images/alcoholic-beverages-close-up-cuisine-cutlery-541216.jpg" alt="Steak" style="width:100%; height: 130px;">
   <audio
@@ -160,7 +160,7 @@ Sorry, your browser doesn't support embedded videos.
     </div>
     <div class="w3-third w3-container w3-margin-bottom" id="grid">
       <div class="card" >
-    <div class="card-body" >
+    <div class="card-body animated bounceInUp" >
 
   <img src="blog_images/bowls-with-meat-stew-salads-and-spices-4194625.jpg" alt="Steak" style="width:100%">
   <div class="content2" style="padding: 0px 10px 10px 10px;" >
@@ -177,7 +177,7 @@ Sorry, your browser doesn't support embedded videos.
     </div>
     <div class="w3-third w3-container" id="grid">
      <div class="card" >
-    <div class="card-body" >
+    <div class="card-body animated bounceInUp" >
 
   <video controls width="100%" height="182px" preload="meta-data" poster="modern.jpg" playsinline="True">
 
@@ -198,7 +198,7 @@ Sorry, your browser doesn't support embedded videos.
     </div>
         <div class="w3-third w3-container" id="grid" >
       <div class="card" >
-    <div class="card-body" >
+    <div class="card-body animated slideInRight" >
      
 
   <video controls width="100%" height="182px"  poster="customer.jpg" preload="auto">
@@ -272,7 +272,9 @@ Sorry, your browser doesn't support embedded videos.
 </div>
 
 <script>
-
+$( document ).ready(function() {
+  new WOW().init();
+});
       function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
 }
@@ -280,6 +282,7 @@ Sorry, your browser doesn't support embedded videos.
 function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
 }
+
     </script>
 
     
