--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <area target="" alt="Martin Yan" title="Martin Yan" href="https://en.wikipedia.org/wiki/Martin_Yan" coords="315,121" shape="poly">
       <area target="" alt="David Chang" title="David Chang"  href="https://twitter.com/davidchang?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" coords="498,160,451,103" shape="rect">
 
-   </map>-->
+   </map>
  </div>
     <div class="w3-padding-32 animated rubberBand delay-1s ">
       <h4  style="font-size: 30px;"><b>We Who We Are!</b></h4>
