--- a/Menu.html
+++ b/Menu.html
@@ -10,29 +10,84 @@
 
    <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/mdb.min.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="menudisplay.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-animate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+  <script src="MenuScript.js"></script>
 </head>
 <style type="text/css">
+  .cart{
+  position: absolute;
+  top: 800px;
+  right: 16px;
+margin-right: 70px;
+  overflow: auto;
+  height: 700px;
+  width: 640px;
+  padding:10px 60px 40px 60px;
   
-th, td {
-  padding: 10px;
-  text-transform: capitalize;
-  }
+}
+.tr{
+  font-weight: bold;
+}
   th{
     text-align: center;
     font-weight: bold;
 
   }
+.table{
+  width: 600px;
 
+}
 p
 {
 	font-style:  italic;
 }
+
+.table {
+  width: 700px;
+}
+
+.on-sale {
+  color: red;
+}
+
+.qty {
+  width: 60px;
+}
+
+.animate-repeat2 {
+  line-height:40px;
+  list-style:none;
+  box-sizing:border-box;
+}
+
+.animate-repeat2.ng-move,
+.animate-repeat2.ng-enter,
+.animate-repeat2.ng-leave {
+  -webkit-transition:all linear 0.5s;
+  transition:all linear 0.5s;
+}
+
+.animate-repeat2.ng-leave.ng-leave-active,
+.animate-repeat2.ng-move,
+.animate-repeat2.ng-enter {
+  opacity:0;
+  max-height:0;
+}
+
+.animate-repeat2.ng-leave,
+.animate-repeat2.ng-move.ng-move-active,
+.animate-repeat2.ng-enter.ng-enter-active {
+  opacity:1;
+  max-height:40px;
+}
 </style>
-<body>
+<body ng-app="myApp" ng-controller="myController">
   <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
  
   <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
@@ -104,97 +159,130 @@ p
   </div>
   <h2 style="text-align: center;"><b>Menu Card</b></h2> 
   <hr>
-  <div class="w3-row-padding w3-padding-16 w3-center " style="padding-left: 19.5%; " id="list">
-    	<div class="w3-quarter mb-3" style="padding-right: :40px;">
-    		<h2 style="font-family:sans-serif;">Starter</h2>
-    	</div>
-    	<div class="w3-quarter mb-3">
-    		<h2 style="font-family:sans-serif;">Soup</h2>
-    	</div>
-    	<div class="w3-quarter mb-3" style="padding-left: 10px;">
-    		<h2 style="font-family:sans-serif;">Main Course</h2>
-    	</div>
-    </div>   
-    <div class="w3-row-padding w3-padding-16 w3-center " style="padding-left: 19.5%; " id="list">
-    	<div class="w3-quarter mb-3" style="padding-right: :40px;">
-<div class="card">
-<table id="Starter">
-<tr><th>Starters</th><th>Customer Rating</th><th>Price</span>
-</th>
-</tr>
-</table>
-  <!--content-->
-</div>
-
-</div>
-
-	<div class="w3-quarter mb-3">
-<div class="card">
-<table id="soup">
-<tr><th>Soups</th><th>Customer Rating</th><th>Price</span>
-</th>
-</tr>
-</table>
  
-</div>
-</div>
-
-	<div class="w3-quarter mb-3" style="padding-left: 10px;">
-<div class="card">
-<table id="maincourse">
-<tr><th>Main Course</th><th>Customer Rating</th><th>Price</span>
-</th>
-</tr>
-</table>
-  
-</div>
-</div>
+<div class="container"  >
+  <h2><b>Category</b></h2>
+<p> <i class="fas fa-utensils" style="margin-right: 10px;"></i>Check out Delicious dishes sepcially made for U</p>
+<!-- Medium input -->
+<div class="md-form" style="width: 20%;">
+  <input type="text" ng-model="searchText" placeholder="search Here" id="inputMDEx" class="form-control">
+  <label for="inputMDEx"></label>
 </div>
 
 
-  <div class="w3-row-padding w3-padding-16 w3-center " style="padding-left: 19.5%; margin-top: 60px; " id="list">
-    	<div class="w3-quarter mb-3" style="padding-right: :40px;">
-    		<h2 style="font-family:sans-serif;">Non-veg</h2>
-    	</div>
-    	<div class="w3-quarter mb-3">
-    		<h2 style="font-family:sans-serif;">Mocktails</h2>
-    	</div>
-    	<div class="w3-quarter mb-3" style="padding-left: 10px;">
-    		<h2 style="font-family:sans-serif;">Desert</h2>
-    	</div>
+  <ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#home">Main Course</a></li>
+    <li><a data-toggle="tab" href="#menu1">Starter</a></li>
+    <li><a data-toggle="tab" href="#menu2">Breakfast</a></li>
+    <li><a data-toggle="tab" href="#menu3">Desert</a></li>
+  </ul>
+
+  <div class="tab-content" >
+    <div id="home" class="tab-pane fade in active">
+<h3><b>Main Course</b></h3>
+ <table class="table table-hover">
+        <tr>
+          <th>Food Name</th>
+          <th>Description</th>
+          <th>Price</th>
+          <th class="qty">Qty</th>
+          <th>Total</th>
+        </tr>
+        <tr class="animate-repeat" ng-repeat="item in maincourse | filter:searchText | orderBy:'category' ">
+          <td>{{ item.category }}</td>
+          <td>{{ item.description }}</td>
+          <td ng-class="{ 'on-sale' : item.onSale }">{{ item.price | currency }}</td>
+          <td><input type="number" ng-model="item.qty" class="qty"></td>
+          <td>{{ item.qty * item.price | currency }}</td>
+          <td>
+            <button class="btn btn-primary px-3" ng-click="addItem(item)"><i class="fas fa-shopping-cart"></i></button></td>
+        </tr>
+      </table>
     </div>
-    <div class="w3-row-padding w3-padding-16 w3-center " style="padding-left: 19.5%;  " id="list">
-    	<div class="w3-quarter mb-3" style="padding-right: :40px;">
-<div class="card">
-<table id="nonveg">
-<tr><th>non-vegies</th><th>Customer Rating</th><th>Price</span>
-</th>
-</tr>
-</table>
-</div>
 
-</div>
+    <div id="menu1" class="tab-pane fade">
+     <h3><b>Starter</b></h3>
+       <table class="table table-hover">
+        <tr>
+          <th>Food Name</th>
+          <th>Description</th>
+          <th>Price</th>
+          <th class="qty">Qty</th>
+          <th>Total</th>
+        </tr>
+        <tr class="animate-repeat" ng-repeat="item in Starter | filter:searchText | orderBy:'category' ">
+          <td>{{ item.category }}</td>
+          <td>{{ item.description }}</td>
+          <td ng-class="{ 'on-sale' : item.onSale }">{{ item.price | currency }}</td>
+          <td><input type="number" ng-model="item.qty" class="qty"></td>
+          <td>{{ item.qty * item.price | currency }}</td>
+          <td>
+            <button class="btn btn-primary px-3" ng-click="addItem(item)"><i class="fas fa-shopping-cart"></i></button></td>
+        </tr>
+      </table>
+    </div>
 
-	<div class="w3-quarter mb-3">
-<div class="card">
-<table id="Mocktail">
-<tr><th>Mocktails</th><th>Customer Rating</th><th>Price</span>
-</th>
-</tr>
-</table>
+    <div id="menu2" class="tab-pane fade">
+      <h3><b>Breakfast</b></h3>
+      <table class="table table-hover">
+        <tr>
+          <th>Food Name</th>
+          <th>Description</th>
+          <th>Price</th>
+          <th class="qty">Qty</th>
+          <th>Total</th>
+        </tr>
+        <tr class="animate-repeat" ng-repeat="item in breakfast | filter:searchText | orderBy:'category' ">
+          <td>{{ item.category }}</td>
+          <td>{{ item.description }}</td>
+          <td ng-class="{ 'on-sale' : item.onSale }">{{ item.price | currency }}</td>
+          <td><input type="number" ng-model="item.qty" class="qty"></td>
+          <td>{{ item.qty * item.price | currency }}</td>
+          <td>
+            <button class="btn btn-primary px-3" ng-click="addItem(item)"><i class="fas fa-shopping-cart"></i></button></td>
+        </tr>
+      </table>
+    </div>
 
+    <div id="menu3" class="tab-pane fade">
+      <h3><b>Desert</b></h3>
+      <table class="table table-hover">
+        <tr>
+          <th>Food Name</th>
+          <th>Description</th>
+          <th>Price</th>
+          <th class="qty">Qty</th>
+          <th>Total</th>
+        </tr>
+        <tr class="animate-repeat" ng-repeat="item in desert | filter:searchText | orderBy:'category' ">
+          <td>{{ item.category }}</td>
+          <td>{{ item.description }}</td>
+          <td ng-class="{ 'on-sale' : item.onSale }">{{ item.price | currency }}</td>
+          <td><input type="number" ng-model="item.qty" class="qty"></td>
+          <td>{{ item.qty * item.price | currency }}</td>
+          <td>
+            <button class="btn btn-primary px-3" ng-click="addItem(item)"><i class="fas fa-shopping-cart"></button></td>
+        </tr>
+      </table>
+    </div>
+    
+  </div>
 </div>
-</div>
-
-	<div class="w3-quarter mb-3" style="padding-left: 10px;">
-<div class="card">
-<table id="Desert">
-<tr><th>Deserts</th><th>Customer Rating</th><th>Price</span>
-</th>
-</tr>
-</table>
-</div>
-</div>
+<div class='cart card booking-card' style="height: 600px;
+  width: 30%;">
+  <h2><b>Your Cart:</b></h2>
+  <hr>
+      <ul>
+        <li Style="margin-left:-40px;"class="animate-repeat" ng-repeat="item in cart | orderBy:'category'">
+          <span>{{ item.qty + ' x ' + item.category + ' = ' + (getCost(item) | currency) }}</span>
+          <button Style="border: none;"class="btn-floating btn-sm red" ng-click="removeItem(item);"><i Style ="color:#fff;"class="fas fa-times"></i></button>
+          </br>
+          </br>
+        </li>
+      </ul>
+      <hr>
+      <h3><b>Total: {{ getTotal() | currency }}</b></h3>
+      <button class="btn btn-danger px-3" ng-click="clearCart();"><i style="margin-right: 10px;" class="fas fa-cart-arrow-down"></i>clear cart</button>
 </div>
 
 <hr id="about">
@@ -227,9 +315,13 @@ p
     
 
   </footer>
-  <script>
+  
 
-</script>
+  
 
 </body>
 </html>
+
+
+
+
