--- a/Menu.html
+++ b/Menu.html
@@ -268,7 +268,7 @@ p
     
   </div>
 </div>
-<div class='cart card booking-card' style="height: 600px;
+<div class='cart card booking-card animated tada delay-2s' style="height: 600px;
   width: 30%;">
   <h2><b>Your Cart:</b></h2>
   <hr>
