--- a/Menu.html
+++ b/Menu.html
@@ -85,6 +85,7 @@ p
 .animate-repeat2.ng-enter.ng-enter-active {
   opacity:1;
   max-height:40px;
+
 }
 </style>
 <body ng-app="myApp" ng-controller="myController">
@@ -268,10 +269,10 @@ p
     
   </div>
 </div>
-<div class='cart card booking-card animated tada delay-2s' style="height: 600px;
+<div class='cart card booking-card animated tada delay-2s' style="background-color: #eeeeee; height: 600px;
   width: 30%;">
   <h2><b>Your Cart:</b></h2>
-  <hr>
+  <hr style="background-color:black;display: block;">
       <ul>
         <li Style="margin-left:-40px;"class="animate-repeat" ng-repeat="item in cart | orderBy:'category'">
           <span>{{ item.qty + ' x ' + item.category + ' = ' + (getCost(item) | currency) }}</span>
@@ -280,7 +281,7 @@ p
           </br>
         </li>
       </ul>
-      <hr>
+       <hr style="background-color:black;display: block;">
       <h3><b>Total: {{ getTotal() | currency }}</b></h3>
       <button class="btn btn-danger px-3" ng-click="clearCart();"><i style="margin-right: 10px;" class="fas fa-cart-arrow-down"></i>clear cart</button>
 </div>
